# Windows-ComputerUse

./: Cargo.toml  README.md  install.ps1
.claude/skills/windows-computeruse/: SKILL.md
.claude/skills/windows-computeruse/references/: tools.md
docs/: SPEC.md
docs/superpowers/specs/: 2026-07-19-targeted-uia-performance-design.md
scripts/: trace_report.ps1
skills/windows-computeruse/references/: tools.md
src/: apps.rs  capture.rs  display.rs  fuzzy.rs  ia2.rs  input_sim.rs  keys.rs  main.rs  params.rs  powershell.rs  server.rs  state.rs  tool_policy.rs  uia.rs  vdm.rs  win.rs  window.rs
src/tools/: app.rs  caret_info.rs  click.rs  clipboard.rs  cursor_position.rs  display_inventory.rs  doctor.rs  filesystem.rs  invoke_element.rs  mod.rs  move_mouse.rs  multi_edit.rs  multi_select.rs  notification.rs  process.rs  registry.rs  scrape.rs  screenshot.rs  scroll.rs  shell.rs  shortcut.rs  snapshot.rs  support.rs  typing.rs  wait.rs  wait_for.rs
tests/: click_accuracy.rs
