[package]
name = "windows-computeruse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
dirs = "6.0.0"
htmd = "0.5.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "gzip", "json", "charset"] }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
windows = { version = "0.62.2", features = [
    "Data_Xml_Dom",
    "Foundation_Collections",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-registry = "0.6.1"
