[package]
name = "windows-computeruse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
csv = "1.4.0"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
strsim = "0.11.1"
sysinfo = "0.39.6"
tokio = { version = "1.53.0", features = ["full"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_WindowsProgramming", "Win32_System_Environment", "Win32_System_Com"] }
windows-registry = "0.6.1"
