[package]
name = "windows-computeruse"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
csv = "1.4.0"
dirs = "6.0.0"
encoding_rs = "0.8.35"
filetime = "0.2.26"
htmd = "0.5.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "gzip", "json", "charset"] }
regex = "1.12.3"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
strsim = "0.11.1"
sysinfo = "0.39.6"
tokio = { version = "1.53.0", features = ["full"] }
windows = { version = "0.62.2", features = [
    "Data_Xml_Dom",
    "Foundation_Collections",
    "UI_Notifications",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WindowsProgramming",
    "Win32_System_WinRT",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-registry = "0.6.1"
